<resources>
    <string name="app_name">GroupProject</string>
    <string name="register_new_account">Register new account</string>
    <string name="add">Add</string>
    <string name="account_login">Account Login</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="passwordInfo">Your password must contain at least one number and one letter, and be between 6 and 32 characters in length.</string>
</resources>